--- a/class_matrix.ipynb
+++ b/class_matrix.ipynb
@@ -17,25 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Матричное пространоство:\n",
-    "-Ввод матриц\n",
-    "-Матрица системы\n",
-    "-Прибавление к iтой строке jой строки с коэф l- T_[i,j](l)\n",
-    "-Паремена мест строк - S_[i,j],i!=j\n",
-    "-Домножение jой строки на элемент обратного класса - D_[i](E)\n",
-    "-Привести к ступенчатой матрице\n",
-    "-Метод Гаусса\n",
-    "-Сумма\n",
-    "-Произведение\n",
-    "-умножение матрицы на скаляр\n",
-    "-Транспонирование\n",
-    "\n",
-    "'''\n",
     "from numbers import Number\n",
     "'''\n",
     "Матрица m*n, n-столбцы, m-строки\n",
@@ -143,17 +128,7 @@
     "            result.append([0]*self.rows)\n",
     "            for j in range(self.rows):\n",
     "                result[i][j]=self.matrix[j][i]\n",
-    "        return(Matrix(result))\n",
-    "\n",
-    "    \n",
-    "'''\n",
-    "Проверка пространства матриц в действии:\n",
-    "'''\n",
-    "a=Matrix([[1,2,3],[4,5,6]])\n",
-    "b=Matrix([[9,8,7,5,7],[6,5,4,4,6],[2,5,7,4,5],[2,6,3,3,5]])\n",
-    "print(b.stairs())\n",
-    "\n",
-    "\n"
+    "        return(Matrix(result))\n"
    ]
   },
   {
@@ -165,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -188,41 +163,57 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mMatrixError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18508/3459600734.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3.\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18508/2436006733.py\u001b[0m in \u001b[0;36m__mul__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    103\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mMatrixError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Self.colums and other.rows must be equel for matrix multiplication'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mNumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18508/378249371.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3.\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Ожидается ошибка(self.columns!=other.rows)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18508/923433845.py\u001b[0m in \u001b[0;36m__mul__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     89\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     90\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 91\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mMatrixError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Self.colums and other.rows must be equel for matrix multiplication'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     92\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mNumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mMatrixError\u001b[0m: Self.colums and other.rows must be equel for matrix multiplication"
      ]
     }
    ],
    "source": [
     "a=Matrix([[1,2,3],[4,5,6]])\n",
-    "print('1.')\n",
+    "print(1)\n",
     "print(a)\n",
     "b=Matrix([[9,8,7],[6,5,4]])\n",
-    "print('2.')\n",
+    "print(2)\n",
     "print(a+b)\n",
-    "print(3.)\n",
+    "print(3)\n",
     "print(a*b)  # Ожидается ошибка(self.columns!=other.rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis ')' does not match opening parenthesis '[' (Temp/ipykernel_18508/4263138090.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\funon\\AppData\\Local\\Temp/ipykernel_18508/4263138090.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    b=Matrix([[9,8,7,5,7],[6,5,4,4,6],[2,4,5,6,7])\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ')' does not match opening parenthesis '['\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "27  30  30  31  40\n",
+      "78  81  78  76  100\n",
+      "5.0\n",
+      "9  8  7  5  7\n",
+      "6  5  4  4  6\n",
+      "2  4  5  6  7\n",
+      "\n",
+      "9  6  2\n",
+      "8  5  4\n",
+      "7  4  5\n",
+      "5  4  6\n",
+      "7  6  7\n"
      ]
     }
    ],
    "source": [
     "a=Matrix([[1,2,3],[4,5,6]])\n",
     "b=Matrix([[9,8,7,5,7],[6,5,4,4,6],[2,4,5,6,7]])\n",
-    "print(a*b)"
+    "print(4)\n",
+    "print(a*b)\n",
+    "print(5)\n",
+    "print(b)\n",
+    "print()\n",
+    "print(b.transpose())"
    ]
   }
  ],
